# rustobot-simulator

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  rustobot-simulator.code-workspace
.github/workflows/: CI.yml
interface/: .dockerignore  Cargo.toml  Dockerfile  Trunk.toml  index.html
interface/src/: main.rs
interface/src/components/: app.rs  dashboard.rs  editor.rs  mod.rs
interface/style/: app.scss  code-editor.scss  style.scss  utils.scss
interface/style/components/: code-editor.scss  dashboard.scss
server/: .dockerignore  Cargo.toml  Dockerfile
server/prisma/: schema.prisma
server/prisma/migrations/20230401090816_default/: migration.sql
server/src/: db.rs  main.rs  services.rs
simulator/: icon.svg.import  project.godot  simulator.sln
simulator/scenes/: RobotArm.tscn  Workspace.tscn  workspace.tscn
simulator/sources/: RobotArm.cs  Workspace.cs  workspace.cs
