[package]
name = "server"
version = "0.0.1"
authors = ["Vinicios Lugli <vinicioslugli@gmail.com>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.6"
log = "0.4.17"
env_logger = "0.10.0"
actix-web = { version = "4.3.1" }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"