[package]
name = "server"
version = "0.0.1"
authors = ["Vinicios Lugli <vinicioslugli@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix = "0.13.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
